# Magma

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
Client/: CMakeLists.txt  imgui.ini  premake5.lua
Client/assets/: Base.frag  Base.vert
Client/assets/OpenGL/: Base.frag  Base.vert
Client/assets/Vulkan/: Base.vert
Client/src/: ClientApp.cpp
Magma/: CMakeLists.txt  premake5.lua
Magma/src/Magma/: Magma.h  pch.h
Magma/src/Magma/Core/: Application.cpp  Application.h  Asserts.h  Entry.h  Input.h  Logger.cpp  Logger.h  Platform.h  Window.h
Magma/src/Magma/Event/: Event.cpp  Event.h  KeyCode.h
Magma/src/Magma/Platform/Linux/: Input.cpp  LinuxWindow.cpp  Window.cpp
Magma/src/Magma/Platform/MacOS/: Input.cpp  MacOSInput.cpp  MacOSWindow.cpp  Window.cpp
Magma/src/Magma/Platform/OpenGL/: IndexBuffer.cpp  IndexBuffer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLRenderingAPI.cpp  OpenGLRenderingAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h  RenderingAPI.cpp  Shader.cpp  Shader.h  Texture.h  Texture2D.cpp  Vertex.h  VertexBuffer.cpp  VertexBuffer.h
Magma/src/Magma/Platform/Vulkan/: Buffer.h  CommandBuffer.h  CommandPool.h  DescriptorPool.h  Device.h  Fence.h  Framebuffer.h  Instance.h  Pipeline.h  RenderPass.h  RenderingAPI.cpp  Semaphore.h  Surface.h  SwapChain.h  Vertex.h  VertexBuffer.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanRenderingAPI.cpp  VulkanRenderingAPI.h  VulkanShader.cpp  VulkanShader.h  VulkanTexture2D.cpp  VulkanTexture2D.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h
Magma/src/Magma/Platform/Windows/: Input.cpp  Window.cpp  WindowsWindow.cpp
Magma/src/Magma/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RenderingAPI.cpp  RenderingAPI.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Magma/src/Magma/Scene/: Camera.cpp  Camera.h
Magma/src/Magma/UI/: DebugUI.cpp  DebugUI.h
Magma/test/: TestMain.cpp
